* Oppdaterte ktlint slik at den er kompatibel med nyeste kotlin-versjon. * Endret oppførsel til å være lik andre ef-repos ved at det ktlint autoformatterer koden i stedet for å bare validere. * Endret compile-task for å gå vekk fra kotlinOptions som er deprecated